--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "permissions": ["activeTab", "scripting"],
 
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "index.html",
     "default_title": "Shopyt"
   }
 }
